Added examples in README.md